# a-langchain-generate-data-demo

./: pyproject.toml
src/resource/: generate_data_prompt.txt  origin_data.py
src/text_generation/: __dev__.py  chains.py  server.py
src/text_generation/data_generator/: chain.py
src/text_generation/data_generator/config/: model_config.py
src/text_generation/data_generator/core/: data_type.py  use_construct_prompt.py  use_llm_chain.py  use_statistics_storage_data_chain.py
tests/: test_use_llm_chain.py  test_use_statistics_storage_data_chain.py
